# microserv-playground

./: .gitignore
auth-service/: .env.example  Cargo.toml  Makefile.toml  login.sh  register.sh
auth-service/src/: auth.rs  main.rs  model.rs  utils.rs
