[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
